fixed bugs on notification on every socket / fixed bugs on showing correct total clients when closing

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -92,3 +92,10 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.userCount {
+  float: right;
+  margin-right: 5em;
+  font-weight: 600;
+  margin-top: 1.5em;
+}
